--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 
 .highlight {
+  color: black;
+  text-decoration: none;
   background: linear-gradient(120deg, #FFE600 100%, #FFE600 100%);
   background-repeat: no-repeat;
   background-size: 100% 35%;
@@ -13,17 +15,13 @@
 }
 
 .circ-img {
-  /* -webkit-clip-path: circle(50%);
-  -moz-clip-path: circle(47%); */
   width: 100%;
 }
 
-/* .circ-border {
-  border: 1px black solid;
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-} */
+.exp-logo {
+  height: 10vh;
+  clip-path: circle();
+}
 
 .contact-link {
   color: black;
